--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,13 @@ body {
     color: #1d252c;
 }
 
+.main {
+    border: 1px solid green;
+    max-width: 950px;
+    background: radial-gradient(circle, rgba(238, 228, 191, 1) 0%, rgba(210, 217, 224, 1) 100%);
+    flex: 1;
+}
+
 .header {
     background: #1b2127;
     height: auto;
@@ -41,7 +48,6 @@ h1 {
 }
 
 .hero {
-    border: 2px solid seagreen;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -60,7 +66,6 @@ h1 {
 }
 
 .content {
-    border: 2px solid red;
     padding: 20px;
 }
 
@@ -86,12 +91,84 @@ h1 {
 }
 
 .footer {
-    border: 2px solid teal;
+    background-color: #1b2127;
+    color: #FCBD30;
+    display: block;
+    text-align: center;
+    border: 1px solid transparent;
+}
+
+.footer a {
+    color: #F56600;
 }
 
 .contact {
-    border: 1px solid violet;
-    border: 1px solid royalblue;
+    /*background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    background-color: #f2ccb2;*/
+    background-image: linear-gradient(62deg, #f2ccb2 0%, #fdde9a 100%);
+    height: auto;
+    padding: 1em 0;
+    text-align: center;
+    display: block;
+}
+
+.social {
+    display: inline-flex;
+}
+
+.social-link {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+}
+
+.social-link.twitter {
+    background-image: url(../images/twitter.svg);
+    background-size: 50px 50px;
+}
+
+.social-link.facebook {
+    background-image: url(../images/facebook.svg);
+    background-size: 50px 50px;
+}
+
+.social-link.github {
+    background-image: url(../images/github.svg);
+    background-size: 50px 50px;
+}
+
+.social-link.instagram {
+    background-image: url(../images/instagram.svg);
+    background-size: 50px 50px;
+}
+
+.email {
+    margin-left: 50px;
+}
+
+.email input {
+    padding: 10px 20px;
+    padding-left: 25px;
+    background-image: url(../images/envelope.svg);
+    background-size: 15px 15px;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: 5px;
+    width: 300px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.email button {
+    width: 150px;
+    display: block;
+    background-color: transparent;
+    color: white;
+    font-size: 15px;
+    border-radius: 5px;
+    border-color: white;
+    padding: 5px 0;
 }
 
 
